kadi-kubernetes/kadi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: kadi
  name: kadi
spec:
  ports:
    - name: "8080"
      port: 80
      targetPort: 8080
  selector:
    io.kompose.service: kadi
